@@ -59,25 +59,6 @@ AC_ARG_ENABLE(
   ])
 AC_SUBST(MEMORY_BASED)
 
-AC_MSG_CHECKING(whether to enable Query Slave)
-AC_ARG_ENABLE(
-  [queryslave],
-  AC_HELP_STRING([--enable-queryslave], [enable Query Slave (default is NO)]),
-  [
-    if test "x$enableval" = "xno"; then
-      AC_MSG_RESULT(no)
-    else
-      QUERY_SLAVE="-DQUERY_SLAVE"
-      SQLSLAVE="sqlslave"
-      AC_MSG_RESULT(yes)
-    fi
-  ],
-  [
-    AC_MSG_RESULT(no)
-  ])
-AC_SUBST(QUERY_SLAVE)
-AC_SUBST(SQLSLAVE)
-
 AC_MSG_CHECKING(whether to enable Firan MUX)
 AC_ARG_ENABLE(
   [firanmux],
