@@ -1,16 +1,0 @@
-// sqlshared.cpp -- Shared code between the main server and the sqlslave.
-//
-// $Id$
-//
-#include "autoconf.h"
-#include "config.h"
-
-#ifdef QUERY_SLAVE
-#include "sqlshared.h"
-
-void sqlfoo(void)
-{
-    return;
-}
-
-#endif // QUERY_SLAVE
