@@ -1,13 +1,0 @@
-// sqlshared.h -- Shared code between the main server and the sqlslave.
-//
-// $Id$
-//
-
-#ifndef SQLSHARED_H
-#define SQLSHARED_H
-#ifdef QUERY_SLAVE
-
-extern void sqlfoo(void);
-
-#endif // QUERY_SLAVE
-#endif // SQLSHARED_H
