@@ -1,2 +1,5 @@
 ALPHA
 BETA
+src/sqlshared.cpp
+src/sqlshared.h
+src/sqlslave.cpp
